kubernetes/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  namespace: test
  labels:
    app: ubuntu
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ubuntu
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        # 更新中、一時的に増やせるPod数
      maxUnavailable: 0  # 更新中、利用不可にしていいPod数（0なら常に3台稼働を維持）
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu-container
        image: ubuntu:22.04
        command: ["/bin/bash", "-c", "sleep infinity"]
