kubernetes/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    # Address が空でも Healthy とみなすように Argo CD に教える
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service # 前に作った Service 名と合わせる
            port:
              number: 80
