kubernetes/test/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: learning-nginx
  labels:
    app: web
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
