kubernetes/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: game-space
spec:
  selector:
    app: game-2048
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
